# photos2timelapse

./: README.md  main.py  pyproject.toml  requirements.txt  run.py  setup.py
src/photos2timelapse/: main.py
