# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photos2timelapse"
version = "0.1.0"  # Comece com uma versão inicial
authors = [
    { name="André de Freitas Smaira", email="andre.smaira@gmail.com" },
]
description = "This tool merges multiple photos that should be of the same position considering that the exif data has photo angles and by fixed object selected by user."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "opencv-python",
    "numpy",
    "moviepy",
    "tqdm",
    "PyExifTool"
]

[project.urls]
Homepage = "https://github.com/afsmaira/photos2timelapse"

[project.scripts]
photos2timelapse = "photos2timelapse.main:main"